--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,25 +1,43 @@
 ---
-dependencies: []
-
 galaxy_info:
-  author: geerlingguy
-  description: Memcached for Linux
-  company: "Midwestern Mac, LLC"
-  license: "license (BSD, MIT)"
-  min_ansible_version: 2.0
+  author: Alexey Wasilyev
+  description: Ansible Container role that creates a memcached container. 
+  company: Ansible by Red Hat
+
+  # If the issue tracker for your role is not on github, uncomment the
+  # next line and provide a value
+  # issue_tracker_url: http://example.com/issue/tracker
+
+  # Some suggested licenses:
+  # - BSD (default)
+  # - MIT
+  # - GPLv2
+  # - GPLv3
+  # - Apache
+  # - CC-BY
+  license: BSD
+
+  min_ansible_version: "2.1"
+
+  # Optionally specify the branch Galaxy will use when accessing the GitHub
+  # repo for this role. During role install, if no tags are available,
+  # Galaxy will use this branch. During import Galaxy will access files on
+  # this branch. If travis integration is cofigured, only notification for this
+  # branch will be accepted. Otherwise, in all cases, the repo's default branch
+  # (usually master) will be used.
+  #github_branch:
+
+  #
+  # Below are all platforms currently available. Just uncomment
+  # the ones that apply to your role. If you don't see your
+  # platform on this list, let us know and we'll get it added!
+  #
   platforms:
-    - name: EL
-      versions:
-      - 6
-      - 7
-    - name: Ubuntu
-      versions:
-      - precise
-      - trusty
-      - xenial
-    - name: Debian
-      versions:
-      - all
-  galaxy_tags:
-    - web
-    - database
+  - name: EL
+    versions:
+    - 7
+
+  galaxy_tags: 
+    - memcached
+    - container
+    - docker 
